kubernetes/apps/development/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: development
spec:
  hostnames: ["forgejo.vzkn.eu"]
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-http
          namespace: development
          port: 3000
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-redirect-from-gitea
spec:
  hostnames: ["gitea.vzkn.eu"]
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: forgejo.vzkn.eu
            statusCode: 301
